fixed rendering and stand alone play

--- a/config/pokered.ini
+++ b/config/pokered.ini
@@ -12,6 +12,7 @@ batch_size = auto
 num_envs = 28
 rom_path = "./pokemon_red.gb"
 state_path = "pokered/states/nballs.ss1"
+headless = True
 frameskip = 4
 max_episode_length = 20480
 ; 16384
