new start state

--- a/config/pokered.ini
+++ b/config/pokered.ini
@@ -11,7 +11,7 @@ batch_size = auto
 [env]
 num_envs = 28
 rom_path = "./pokemon_red.gb"
-state_path = "pokered/states/nballs.ss1"
+state_path = "pokered/states/new_start.ss1"
 headless = True
 frameskip = 4
 max_episode_length = 20480
