fixed forgetting issues

--- a/config/pokered.ini
+++ b/config/pokered.ini
@@ -12,6 +12,7 @@ batch_size = auto
 num_envs = 28
 rom_path = "./pokemon_red.gb"
 state_path = "pokered/states/new_start.ss1"
+; headless = False
 headless = True
 frameskip = 4
 max_episode_length = 20480
@@ -41,7 +42,7 @@ bptt_horizon = 512
 compile = False
 compile_mode = reduce-overhead
 compile_fullgraph = False
-anneal_lr =  False
+anneal_lr =  True
 device = cuda
 
 gamma = 0.9815646031317408
